--- a/styles/styles.css
+++ b/styles/styles.css
@@ -67,6 +67,7 @@ body {
   color: var(--text-color);
   background-color: var(--background-color);
   display: none;
+  background: blue;
 }
 
 body.appear {
